2005-06-27  Hubert Figuiere  <hfiguiere@teaser.fr>

	* po/ru.po: Update ru.po

2005-06-11  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* configure.in: new version 2.1.99.head.0
	* camlibs/**/Makefile.am: link camlibs as libtool modules with
	  shorter names and explicit symbol list
	* libgphoto2/Makefile.am: link libgphoto2 with explicit symbol list

2005-06-08  Theodore Kilgore <kilgota@auburn.edu>

	* libgphoto2_port/: added functions to support new request types
	* camlibs/sonix:   initial hookup
	* configure.in:	    hooked up camlibs/sonix

2005-05-13  Marcus Meissner  <marcus@jet.franken.de>

	* po/eu.po: new baskish from Hizkuntza Politikarako Sailburuordetza <hizkpol@ej-gv.es>

2005-04-14  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* */configure.in, */Makefile.am, ...: updated build system.
	  See "./autogen.sh --help" and ./configure --help" for help.

2005-04-05  Hubert Figuiere  <hfiguiere@teaser.fr>

	* camlibs/ptp: removing obsolete camlib.
	
2005-03-30  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* libgphoto2/gphoto2-file.c: replace stricmp() by strcasecmp()
	  #include <gphoto2-port-portability.h> should take care of
	  portability of strcasecmp()

2005-02-07  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2/gphoto2-filesys.c:
	  Use the minimum of the 3 exif timestamps (time, capture time,
	  digitized time). This fixes use on the Traveller SX330Z as
	  reported.

2005-01-18  Marcus Meisser   <marcus@jet.franken.de>

	* po/ru.po: Update thanks to Vyacheslav Dikonov <sdiconov@mail.ru>

2005-01-17  Colin Marquardt  <colin@marquardt-home.de>

	* po/ja.po: Update thanks to Takeshi AIHANA.

2004-12-15  Hubert Figuiere  <hfiguiere@teaser.fr>

	* configure.in: 2.1.5

2004-11-26  Hubert Figuiere  <hfiguiere@teaser.fr>

	* configure.in: 2.1.5rc1

2004-11-26  Theodore Kilgore <kilgota@auburn.edu>

	* camlibs/iclick/*: New camera driver written by T. K. and 
	  Stephen Pollei <stephen_pollei@comcast.net>. 