@@ -374,50 +374,6 @@ AM_CONDITIONAL(HAVE_LIBUSB,test -n "${LIBUSB_CONFIG}")
 
 
 dnl ---------------------------------------------------------------------------
-dnl /proc/meminfo: If the meminfo /proc entry is available, we use it
-dnl to limit the libgphoto2 filesystem cache size.
-dnl ---------------------------------------------------------------------------
-meminfo_msg="not available"
-meminfo=false
-
-case "$host" in
-*linux*)
-	if test "$cross_compiling" != yes; then
-		AC_CHECK_FILE([/proc/meminfo], [
-			meminfo_msg="/proc/meminfo (verified)";
-		])
-	else
-		meminfo_msg="/proc/meminfo (judged from host $host)"
-	fi
-	AC_DEFINE(HAVE_PROCMEMINFO,1,[whether we get memory info from /proc/meminfo])
-	;;
-*)
-	dnl Check for sysctl()
-	AC_MSG_CHECKING([for sysctl on BSD])
-	AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-		#ifdef __FreeBSD__
-		#	 include <sys/types.h>
-		#elif (__NetBSD__ || __OpenBSD__)
-		#	 include <sys/param.h>
-		#endif
-		#include <unistd.h>
-		#include <sys/sysctl.h>]], [[int mib[2] = { CTL_HW, HW_PHYSMEM };
-		int value;
-		size_t valuelen = sizeof(value);
-		sysctl(mib, 2 , &value, &valuelen, NULL, 0)
-	]])],[
-		AC_DEFINE(HAVE_SYSCTL,1,whether we may use sysctl)
-		AC_MSG_RESULT(yes)
-	],[
-		AC_MSG_RESULT(no)
-	])
-	;;
-esac
-
-GP_CONFIG_MSG([Memory information],[$meminfo_msg])
-
-
-dnl ---------------------------------------------------------------------------
 dnl Turn on all warnings when using gcc
 dnl ---------------------------------------------------------------------------
 if test "$GCC" = "yes"; then
